enable_testing()

file(GLOB TEST_SRC "main.c")
file(GLOB TEST_HDRS "*.h")
file(GLOB TESTS ${TEST_HDRS} ${TEST_SRC})

set(TEST_BINARY_NAME ${CMAKE_PROJECT_NAME}-tests)

add_executable(${TEST_BINARY_NAME} ${TESTS})
target_link_libraries(${TEST_BINARY_NAME} ${CMAKE_PROJECT_NAME})
set_target_properties(${TEST_BINARY_NAME} PROPERTIES LINKER_LANGUAGE C C_STANDARD 99)
target_compile_definitions(${TEST_BINARY_NAME} PRIVATE AWS_UNSTABLE_TESTING_API=1)
target_include_directories(${TEST_BINARY_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
if (MSVC)
    target_compile_options(${TEST_BINARY_NAME} PRIVATE /W4 /WX)
else ()
    target_compile_options(${TEST_BINARY_NAME} PRIVATE -Wall -Wno-long-long -Werror)
endif ()

file(GLOB META_TESTS "assert_test.c")

set(METATEST_BINARY_NAME ${CMAKE_PROJECT_NAME}-assert-tests)

add_executable(${METATEST_BINARY_NAME} ${META_TESTS})
target_link_libraries(${METATEST_BINARY_NAME} ${CMAKE_PROJECT_NAME})
set_target_properties(${METATEST_BINARY_NAME} PROPERTIES LINKER_LANGUAGE C C_STANDARD 99)
target_compile_definitions(${METATEST_BINARY_NAME} PRIVATE AWS_UNSTABLE_TESTING_API=1)
target_include_directories(${METATEST_BINARY_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
if (MSVC)
    target_compile_options(${METATEST_BINARY_NAME} PRIVATE /W4 /WX)
else ()
    target_compile_options(${METATEST_BINARY_NAME} PRIVATE -Wall -Wno-long-long -Werror)
endif ()

add_test(assert_test ${METATEST_BINARY_NAME} ${CMAKE_CURRENT_BINARY_DIR}/metatest.tmp)

add_test(raise_errors_test ${TEST_BINARY_NAME} raise_errors_test)
add_test(reset_errors_test ${TEST_BINARY_NAME} reset_errors_test)
add_test(error_callback_test ${TEST_BINARY_NAME} error_callback_test)
add_test(unknown_error_code_in_slot_test ${TEST_BINARY_NAME} unknown_error_code_in_slot_test)
add_test(unknown_error_code_no_slot_test ${TEST_BINARY_NAME} unknown_error_code_no_slot_test)
add_test(unknown_error_code_range_too_large_test ${TEST_BINARY_NAME} unknown_error_code_range_too_large_test)

add_test(thread_creation_join_test ${TEST_BINARY_NAME} thread_creation_join_test)

add_test(mutex_aquire_release_test ${TEST_BINARY_NAME} mutex_aquire_release_test)
add_test(mutex_is_actually_mutex_test ${TEST_BINARY_NAME} mutex_is_actually_mutex_test)

add_test(conditional_notify_one ${TEST_BINARY_NAME} conditional_notify_one)
add_test(conditional_notify_all ${TEST_BINARY_NAME} conditional_notify_all)
add_test(conditional_wait_timeout ${TEST_BINARY_NAME} conditional_wait_timeout)

add_test(error_code_cross_thread_test, ${TEST_BINARY_NAME} error_code_cross_thread_test)

add_test(high_res_clock_increments_test ${TEST_BINARY_NAME} high_res_clock_increments_test)
add_test(sys_clock_increments_test ${TEST_BINARY_NAME} sys_clock_increments_test)
add_test(error_code_cross_thread_test, ${TEST_BINARY_NAME} error_code_cross_thread_test)
add_test(array_list_order_push_back_pop_front_test ${TEST_BINARY_NAME} array_list_order_push_back_pop_front_test)
add_test(array_list_order_push_back_pop_back_test ${TEST_BINARY_NAME} array_list_order_push_back_pop_back_test)
add_test(array_list_pop_front_n_test ${TEST_BINARY_NAME} array_list_pop_front_n_test)
add_test(array_list_exponential_mem_model_test ${TEST_BINARY_NAME} array_list_exponential_mem_model_test)
add_test(array_list_exponential_mem_model_iteration_test ${TEST_BINARY_NAME} array_list_exponential_mem_model_iteration_test)
add_test(array_list_iteration_by_ptr_test ${TEST_BINARY_NAME} array_list_iteration_by_ptr_test)
add_test(array_list_iteration_test ${TEST_BINARY_NAME} array_list_iteration_test)
add_test(array_list_preallocated_iteration_test ${TEST_BINARY_NAME} array_list_preallocated_iteration_test)
add_test(array_list_preallocated_push_test ${TEST_BINARY_NAME} array_list_preallocated_push_test)
add_test(array_list_shrink_to_fit_test ${TEST_BINARY_NAME} array_list_shrink_to_fit_test)
add_test(array_list_shrink_to_fit_static_test ${TEST_BINARY_NAME} array_list_shrink_to_fit_static_test)
add_test(array_list_clear_test ${TEST_BINARY_NAME} array_list_clear_test)
add_test(array_list_copy_test ${TEST_BINARY_NAME} array_list_copy_test)
add_test(array_list_swap_contents_test ${TEST_BINARY_NAME} array_list_swap_contents_test)
add_test(array_list_not_enough_space_test ${TEST_BINARY_NAME} array_list_not_enough_space_test)
add_test(array_list_not_enough_space_test_failure ${TEST_BINARY_NAME} array_list_not_enough_space_test_failure)
add_test(priority_queue_push_pop_order_test ${TEST_BINARY_NAME} priority_queue_push_pop_order_test)
add_test(priority_queue_random_values_test ${TEST_BINARY_NAME} priority_queue_random_values_test)
add_test(priority_queue_size_and_capacity_test ${TEST_BINARY_NAME} priority_queue_size_and_capacity_test)

add_test(linked_list_push_back_pop_front ${TEST_BINARY_NAME} linked_list_push_back_pop_front)
add_test(linked_list_push_front_pop_back ${TEST_BINARY_NAME} linked_list_push_front_pop_back)
add_test(linked_list_iteration ${TEST_BINARY_NAME} linked_list_iteration)

add_test(hex_encoding_test_case_empty_test ${TEST_BINARY_NAME} hex_encoding_test_case_empty_test)
add_test(hex_encoding_test_case_f_test ${TEST_BINARY_NAME} hex_encoding_test_case_f_test)
add_test(hex_encoding_test_case_fo_test ${TEST_BINARY_NAME} hex_encoding_test_case_fo_test)
add_test(hex_encoding_test_case_foo_test ${TEST_BINARY_NAME} hex_encoding_test_case_foo_test)
add_test(hex_encoding_test_case_foob_test ${TEST_BINARY_NAME} hex_encoding_test_case_foob_test)
add_test(hex_encoding_test_case_fooba_test ${TEST_BINARY_NAME} hex_encoding_test_case_fooba_test)
add_test(hex_encoding_test_case_foobar_test ${TEST_BINARY_NAME} hex_encoding_test_case_foobar_test)
add_test(hex_encoding_test_case_missing_leading_zero ${TEST_BINARY_NAME} hex_encoding_test_case_missing_leading_zero)
add_test(hex_encoding_invalid_buffer_size_test ${TEST_BINARY_NAME} hex_encoding_invalid_buffer_size_test)
add_test(hex_encoding_invalid_buffer_size_test ${TEST_BINARY_NAME} hex_encoding_invalid_buffer_size_test)
add_test(hex_encoding_overflow_test ${TEST_BINARY_NAME} hex_encoding_overflow_test)
add_test(hex_encoding_invalid_string_test ${TEST_BINARY_NAME} hex_encoding_invalid_string_test)
add_test(base64_encoding_test_case_empty_test ${TEST_BINARY_NAME} base64_encoding_test_case_empty_test)
add_test(base64_encoding_test_case_f_test ${TEST_BINARY_NAME} base64_encoding_test_case_f_test)
add_test(base64_encoding_test_case_fo_test ${TEST_BINARY_NAME} base64_encoding_test_case_fo_test)
add_test(base64_encoding_test_case_foo_test ${TEST_BINARY_NAME} base64_encoding_test_case_foo_test)
add_test(base64_encoding_test_case_foob_test ${TEST_BINARY_NAME} base64_encoding_test_case_foob_test)
add_test(base64_encoding_test_case_fooba_test ${TEST_BINARY_NAME} base64_encoding_test_case_fooba_test)
add_test(base64_encoding_test_case_foobar_test ${TEST_BINARY_NAME} base64_encoding_test_case_foobar_test)
add_test(base64_encoding_buffer_size_too_small_test ${TEST_BINARY_NAME} base64_encoding_buffer_size_too_small_test)
add_test(base64_encoding_buffer_size_overflow_test ${TEST_BINARY_NAME} base64_encoding_buffer_size_overflow_test)
add_test(base64_encoding_buffer_size_invalid_test ${TEST_BINARY_NAME} base64_encoding_buffer_size_invalid_test)
add_test(base64_encoding_invalid_buffer_test ${TEST_BINARY_NAME} base64_encoding_invalid_buffer_test)
add_test(base64_encoding_invalid_padding_test ${TEST_BINARY_NAME} base64_encoding_invalid_padding_test)
add_test(base64_encoding_test_zeros ${TEST_BINARY_NAME} base64_encoding_test_zeros)
add_test(base64_encoding_test_all_values ${TEST_BINARY_NAME} base64_encoding_test_all_values)
add_test(uint64_buffer_test ${TEST_BINARY_NAME} uint64_buffer_test)
add_test(uint64_buffer_non_aligned_test ${TEST_BINARY_NAME} uint64_buffer_non_aligned_test)
add_test(uint32_buffer_test ${TEST_BINARY_NAME} uint32_buffer_test)
add_test(uint32_buffer_non_aligned_test ${TEST_BINARY_NAME} uint32_buffer_non_aligned_test)
add_test(uint24_buffer_test ${TEST_BINARY_NAME} uint24_buffer_test)
add_test(uint24_buffer_non_aligned_test ${TEST_BINARY_NAME} uint24_buffer_non_aligned_test)
add_test(uint16_buffer_test ${TEST_BINARY_NAME} uint16_buffer_test)
add_test(uint16_buffer_non_aligned_test ${TEST_BINARY_NAME} uint16_buffer_non_aligned_test)
add_test(uint16_buffer_signed_positive_test ${TEST_BINARY_NAME} uint16_buffer_signed_positive_test)
add_test(uint16_buffer_signed_negative_test ${TEST_BINARY_NAME} uint16_buffer_signed_negative_test)

add_test(scheduler_cleanup_cancellation ${TEST_BINARY_NAME} scheduler_cleanup_cancellation)
add_test(scheduler_ordering_test ${TEST_BINARY_NAME} scheduler_ordering_test)
add_test(scheduler_pops_task_late_test ${TEST_BINARY_NAME} scheduler_pops_task_late_test)
add_test(scheduler_task_timestamp_test ${TEST_BINARY_NAME} scheduler_task_timestamp_test)
add_test(scheduler_reentrant_safe, ${TEST_BINARY_NAME} scheduler_reentrant_safe)

add_test(test_hash_table_put_get ${TEST_BINARY_NAME} test_hash_table_put_get)
add_test(test_hash_table_string_put_get ${TEST_BINARY_NAME} test_hash_table_string_put_get)
add_test(test_hash_table_string_clean_up ${TEST_BINARY_NAME} test_hash_table_string_clean_up)
add_test(test_hash_table_hash_collision ${TEST_BINARY_NAME} test_hash_table_hash_collision)
add_test(test_hash_table_hash_overwrite ${TEST_BINARY_NAME} test_hash_table_hash_overwrite)
add_test(test_hash_table_hash_remove ${TEST_BINARY_NAME} test_hash_table_hash_remove)
add_test(test_hash_table_hash_clear_allows_cleanup ${TEST_BINARY_NAME} test_hash_table_hash_clear_allows_cleanup)
add_test(test_hash_table_on_resize_returns_correct_entry ${TEST_BINARY_NAME} test_hash_table_on_resize_returns_correct_entry)
add_test(test_hash_churn ${TEST_BINARY_NAME} test_hash_churn)

add_test(test_u64_saturating ${TEST_BINARY_NAME} test_u64_saturating)
add_test(test_u32_saturating ${TEST_BINARY_NAME} test_u32_saturating)
add_test(test_u64_checked ${TEST_BINARY_NAME} test_u64_checked)
add_test(test_u32_checked ${TEST_BINARY_NAME} test_u32_checked)

add_test(nospec_index_test ${TEST_BINARY_NAME} nospec_index_test)
add_test(test_byte_cursor_advance ${TEST_BINARY_NAME} test_byte_cursor_advance)
add_test(test_byte_cursor_advance_nospec ${TEST_BINARY_NAME} test_byte_cursor_advance_nospec)

add_test(byte_cursor_write_tests ${TEST_BINARY_NAME} byte_cursor_write_tests)
add_test(byte_cursor_read_tests ${TEST_BINARY_NAME} byte_cursor_read_tests)
add_test(byte_cursor_limit_tests ${TEST_BINARY_NAME} byte_cursor_limit_tests)
add_test(string_tests ${TEST_BINARY_NAME} string_tests)

add_test(test_char_split_happy_path ${TEST_BINARY_NAME} test_char_split_happy_path)
add_test(test_char_split_ends_with_token ${TEST_BINARY_NAME} test_char_split_ends_with_token)
add_test(test_char_split_token_not_present ${TEST_BINARY_NAME} test_char_split_token_not_present)
add_test(test_char_split_empty ${TEST_BINARY_NAME} test_char_split_empty)
add_test(test_char_split_adj_tokens ${TEST_BINARY_NAME} test_char_split_adj_tokens)
add_test(test_char_split_begins_with_token ${TEST_BINARY_NAME} test_char_split_begins_with_token)
add_test(test_char_split_with_max_splits ${TEST_BINARY_NAME} test_char_split_with_max_splits)
add_test(test_char_split_output_too_small ${TEST_BINARY_NAME} test_char_split_output_too_small)
add_test(test_buffer_cat ${TEST_BINARY_NAME} test_buffer_cat)
add_test(test_buffer_cat_dest_too_small ${TEST_BINARY_NAME} test_buffer_cat_dest_too_small)
add_test(test_buffer_cpy ${TEST_BINARY_NAME} test_buffer_cpy)
add_test(test_buffer_cpy_dest_too_small ${TEST_BINARY_NAME} test_buffer_cpy_dest_too_small)
add_test(test_buffer_cpy_offsets ${TEST_BINARY_NAME} test_buffer_cpy_offsets)
add_test(test_buffer_cpy_offsets_dest_too_small ${TEST_BINARY_NAME} test_buffer_cpy_offsets_dest_too_small)

add_test(byte_swap_test ${TEST_BINARY_NAME} byte_swap_test)
