[package]
name = "aws-crt-c-flags"
version = "0.1.0"
authors = ["AWS Common Runtime Team <aws-sdk-common-runtime-team@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = { version="1.0", features = ["parallel"] }
serde_json = { version="1.0" }
serde = { version="1.0", features = ["derive"] }
fs_extra = "1.2.0"
gag = "0.1.10"
